# IS_Proiect2

./: CMakeLists.txt  CMakeUserPresets.json  QtLocal.cmake  README.md
Logic/: Board.cpp  Board.h  Cell.h  CellState.h  Game.cpp  Game.h  GameFactory.cpp  GameFactory.h  GameState.h  IBoard.h  IGame.h  IGameFactory.h  IGameListener.h  IPlayer.h  Orientation.h  Player.cpp  Player.h  Position.cpp  Position.h  PositionUtils.h  Ship.cpp  Ship.h  ShipPart.cpp  ShipPart.h  main.cpp
UI/: CMakeLists.txt  boardwidget.cpp  boardwidget.h  gameui.cpp  gameui.h  main.cpp  qt_helpers.h
UnitTests/: BoardTests.cpp  CMakeLists.txt  CellTests.cpp  GameTests.cpp  OrientationTests.cpp  PlayerTests.cpp  PositionTests.cpp  ShipTests.cpp
